--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <!-- Enlaces-->
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery-3.3.1.min.js" charset="utf-8"></script>
+    <script type="text/javascript" src="js/splash.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
     </body>
 </html>
