activando boton al agregar codigo

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <body>
 <!-- Primer vista logo lyft-->
     <section class="row">
-        <div id="first-section" class="col-xs-12 col-lg-12"></div>
+        <div id="first-section" class="col-xs-12"></div>
     </section>
 <!-- Segunda vista sign up-->
     <section class="row">
-      <div id="second-section" class="col-xs-12 col-lg-12">
+      <div id="second-section" class="col-xs-12">
         <button type="button" class="btn btn-lg btn-outline-light principalBtn">LOG IN</button>
         <button type="button" class="btn btn-lg btn-outline-light principalBtn2"><a href="views/view.html">SIGN UP</a></button>
       </div>
